<resources>
    <string name="app_name">NMPS</string>
    <string name="enter_summ">Введите сумму</string>
    <string name="add_summ">Пополнить</string>
    <string name="minus_summ">Отправить</string>
    <string name="read_summ">Считанная сумма</string>
    <string name="btn_scan">сканировать</string>
    <string name="balance">Ваш баланс:</string>
    <string name="not_enough_balance">НЕДОСТАТОЧНО БАЛАНСА</string>
    <string name="success_minus">С баланса успешно списалось</string>
    <string name="success_plus">Баланс успешно пополнен на</string>
    <string name="ok">OK</string>
</resources>
